--- a/styles.css
+++ b/styles.css
@@ -353,3 +353,88 @@ nav ul li:hover ul {
     color: #ea6a6a;
     text-decoration: underline;
 }
+
+
+form {
+    max-width: 400px;
+    margin: 0 auto 100px; /* Add a bottom margin that is at least the height of your footer */
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+form h2 {
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+form p {
+    font-size: 1.1em;
+    color: #333;
+}
+
+form input[type="email"],
+form input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+}
+
+form button {
+    background-color: #F38181;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    width: 100%;
+}
+
+form button:hover {
+    background-color: #ea6a6a;
+}
+
+.form-link {
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+    color: #F38181;
+}
+
+.form-link:hover {
+    color: #ea6a6a;
+    text-decoration: underline;
+}
+
+.notice {
+    color: #ea6a6a;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+input[type="submit"] {
+    background-color: #F38181;
+    color: white;
+    border: none;
+    padding: 15px 30px;
+    border-radius: 5px;
+    font-size: 1.2em;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 20px;  /* to add some space above the button */
+    width: 100%; /* makes the button stretch to full width of its container */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1); /* adds a slight shadow for a 3D effect */
+}
+
+input[type="submit"]:hover {
+    background-color: #ea6a6a;
+}
+
+input[type="submit"]:active {
+    background-color: #C45B5B;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); /* reduces the shadow when button is clicked */
+}
