--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>YAMP: Youtube Ad Matching Platform</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
 </head>
 <body>
     <header>
@@ -10,7 +10,7 @@
         <div class="header-content">
             <div class="logo-container">
                 <a href="index.html">
-                    <img src="./YAMP_logo.png" alt="YAMP Logo" id="logo" />
+                    <img src="static/img/YAMP_logo.png" alt="YAMP Logo" id="logo" />
                 </a>
             </div>
             <div class="header-text">
@@ -79,7 +79,7 @@
         <h2>Our Pricing</h2>
         <p>Find a plan that's right for you. Check out our competitive pricing options:</p>
         <div class="pricing-image-container">
-            <img src="./P4DS IA_userflow_pricing.png" alt="Pricing Details" />
+            <img src="static/img/P4DS IA_userflow_pricing.png" alt="Pricing Details" />
         </div>
         <!-- Replace "path_to_your_jpg_file.jpg" with the actual path of your pricing jpg file -->
     </section>
