--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>YAMP: Login</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
 </head>
 <body>
     <header>
@@ -10,7 +10,7 @@
         <div class="header-content">
             <div class="logo-container">
                 <a href="index.html">
-                    <img src="./YAMP_logo.png" alt="YAMP Logo" id="logo" />
+                    <img src="static/img/YAMP_logo.png" alt="YAMP Logo" id="logo" />
                 </a>
             </div>
             <div class="header-text">
