--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -13,7 +13,7 @@ nav {
 
 header {
     position: relative;
-    background-image: url('./cardmapr-nl-tvzykmBf3r0-unsplash.jpg');
+    background-image: url('../img/cardmapr-nl-tvzykmBf3r0-unsplash.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
