--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
         <div class="header-content">
             <div class="logo-container">
                 <a href="index.html">
-                    <img src="./YAMP_logo.png" alt="YAMP Logo" id="logo" />
+                    <img src="static/img/YAMP_logo.png" alt="YAMP Logo" id="logo" />
                 </a>
             </div>
             <div class="header-text">
