--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
         <div class="header-overlay"></div>
         <div class="header-content">
             <div class="logo-container">
-                <a href="index.html">
+                <a href="/">
                     <img src="static/img/YAMP_logo.png" alt="YAMP Logo" id="logo" />
                 </a>
             </div>
@@ -29,12 +29,12 @@
             <input type="password" id="password" name="password" required><br>
             <input type="submit" value="Login">
         </form>
-        <p>Not registered yet? <a class="register-link" href="register.html">Register now</a></p>
+        <p>Not registered yet? <a class="register-link" href="/register">Register now</a></p>
     </div>
 
     <footer>
         <div class="footer-content">
-            <a href="sotube.html">About SoTube</a>
+            <a href="sotube">About SoTube</a>
             <p>&copy; 2023 YAMP. All rights reserved.</p>
         </div>
     </footer>
