--- a/templates/register.html
+++ b/templates/register.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>YAMP: Register</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
 </head>
 <body>
     <header>
         <div class="header-overlay"></div>
         <div class="header-content">
             <div class="logo-container">
-                <a href="index.html">
+                <a href="/">
                     <img src="static/img/YAMP_logo.png" alt="YAMP Logo" id="logo" />
                 </a>
             </div>
@@ -29,14 +29,14 @@
             <input type="password" id="password" name="password" required><br>
             <label for="confirmPassword">Confirm Password:</label><br>
             <input type="password" id="confirmPassword" name="confirmPassword" required><br>
-            <input type="submit" value="Register">
+            <input type="button" value="Register">
         </form>
-        <p>Already have an account? <a class="login-link" href="login.html">Login now</a></p>
+        <p>Already have an account? <a class="login-link" href="login">Login now</a></p>
     </div>
 
     <footer>
         <div class="footer-content">
-            <a href="sotube.html">About SoTube</a>
+            <a href="sotube">About SoTube</a>
             <p>&copy; 2023 YAMP. All rights reserved.</p>
         </div>
     </footer>
