--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,6 +6,16 @@ body {
     background-color: #f5f5f5;
 }
 
+.container{
+    display : flex;
+    flex-direction : column;
+    align-items: center;
+}
+
+.container section{
+    width : 1000px;
+}
+
 nav {
     position: relative;
     z-index: 5;
@@ -322,7 +332,7 @@ nav ul li:hover ul {
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 30%; /* Could be more or less, depending on screen size */
+    width: 500px; /* Could be more or less, depending on screen size */
     border-radius: 15px;
     font-family: Arial, sans-serif;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -425,7 +435,7 @@ form button:hover {
     margin-bottom: 20px;
 }
 
-input[type="submit"] {
+input[type="button"] {
     background-color: #F38181;
     color: white;
     border: none;
