--- a/templates/sotube.html
+++ b/templates/sotube.html
@@ -3,13 +3,14 @@
 <head>
     <title>About SoTube Team</title>
     <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+    <script type="text/javascript" src="static/js/login.js"></script>
 </head>
 <body>
     <header>
         <div class="header-overlay"></div>
         <div class="header-content">
             <div class="logo-container">
-                <a href="index.html">
+                <a href="/">
                     <img src="static/img/YAMP_logo.png" alt="YAMP Logo" id="logo" />
                 </a>
             </div>
@@ -127,7 +128,7 @@
 
     <footer>
         <div class="footer-content">
-            <a href="sotube.html">About SoTube</a>
+            <a href="sotube">About SoTube</a>
             <p>&copy; 2023 YAMP. All rights reserved.</p>
         </div>
     </footer>
@@ -154,65 +155,5 @@
             </div>
         </div>
     </div>
-
-    <script>
-        // Simulate user status
-        var isLoggedIn = false;
-    
-        window.onload = function () {
-            var btn = document.getElementById('login-button');
-            var modal = document.getElementById('loginModal');
-            var menuLinks = document.querySelectorAll('nav a');
-    
-            // When the user clicks on the button, open the modal 
-            btn.onclick = function() {
-                modal.style.display = 'block';
-            }
-    
-            // If a user tries to access any menu without login, open the login modal
-            menuLinks.forEach(function(link) {
-                link.onclick = function(e) {
-                    e.preventDefault();
-                    if (!isLoggedIn) {
-                        modal.style.display = 'block';
-                    }
-                }
-            });
-    
-            // Close modal when 'x' is clicked
-            var span = document.getElementsByClassName("close")[0];
-            span.onclick = function() {
-            modal.style.display = "none";
-            }
-    
-            // Close modal when clicked outside
-            window.onclick = function(event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-            }
-        }
-    
-        function nextStep(id) {
-            switch(id) {
-                case 'continueYoutube':
-                    // Continue with Youtube account
-                    // Add your Youtube authentication process here
-                    break;
-                case 'continueGoogle':
-                    // Continue with Google account
-                    // Add your Google authentication process here
-                    break;
-                case 'emailLogin':
-                    // Login with email
-                    window.location.href = "login.html";
-                    break;
-                case 'emailRegistration':
-                    // Register now
-                    window.location.href = "register.html";
-                    break;
-            }
-        }
-    </script>    
 </body>
 </html>
