--- a/templates/sotube.html
+++ b/templates/sotube.html
@@ -114,7 +114,7 @@
 
         <section id="contact">
             <h2>Contact Us</h2>
-            <form id="contact-form">
+            <form id="contact-form" action="/contact", method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email:</label>
