--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -9,8 +9,8 @@
         <div class="header-overlay"></div>
         <div class="header-content">
             <div class="logo-container">
-                <a href="index.html">
-                    <img src="./YAMP_logo.png" alt="YAMP Logo" id="logo" />
+                <a href="/">
+                    <img src="static/img/YAMP_logo.png" alt="YAMP Logo" id="logo" />
                 </a>
             </div>
             <div class="header-text">
@@ -94,7 +94,7 @@
     
     <footer>
         <div class="footer-content">
-            <a href="sotube.html">About SoTube</a>
+            <a href="/sotube">About SoTube</a>
             <p>&copy; 2023 YAMP. All rights reserved.</p>
         </div>
     </footer>
@@ -185,11 +185,11 @@
                     break;
                 case 'emailLogin':
                     // Login with email
-                    window.location.href = "login.html";
+                    window.location.href = "/login";
                     break;
                 case 'emailRegistration':
                     // Register now
-                    window.location.href = "register.html";
+                    window.location.href = "/register";
                     break;
             }
         }
