--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -45,17 +45,17 @@
                     <li><a href="#">To Advertiser</a></li>
                 </ul>
             </li>
-            <li><a href="mypage.html">My Page</a> <!-- Link to My Page -->
+            <li><a href="/mypage">My Page</a> <!-- Link to My Page -->
                 <ul>
-                    <li><a href="mypage.html#member-information">Member Information</a></li> <!-- Link to Member Information -->
-                    <li><a href="mypage.html#analysis-history">Recent Analysis History</a></li> <!-- Link to Recent Analysis History -->
-                    <li><a href="mypage.html#purchased-service">My Purchased Service</a></li> <!-- Link to My Purchased Service -->
-                    <li><a href="feedback.html">Feedback</a></li> <!-- Link to Feedback -->
+                    <li><a href="/mypage#member-information">Member Information</a></li> <!-- Link to Member Information -->
+                    <li><a href="/mypage#analysis-history">Recent Analysis History</a></li> <!-- Link to Recent Analysis History -->
+                    <li><a href="/mypage#purchased-service">My Purchased Service</a></li> <!-- Link to My Purchased Service -->
+                    <li><a href="/feedback">Feedback</a></li> <!-- Link to Feedback -->
                 </ul>
             </li>
         </ul>
         <div class="login-button-container">
-            <a href="#" id="login-button">Log In</a>
+            <a href="#" id="logout-button">Log Out</a>
         </div>
     </nav>
     
