--- a/styles.css
+++ b/styles.css
@@ -448,7 +448,54 @@ input[type="submit"]:active {
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); /* reduces the shadow when button is clicked */
 }
 
-/* my page */
+/* feedback.html */
+
+/* Adjust the margin and padding as needed */
+#feedback {
+    margin: 100px;
+}
+
+#feedback h2 {
+    color: #1a1a1a;
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
+
+#feedback-form label {
+    font-weight: bold;
+}
+
+#feedback-form input,
+#feedback-form textarea {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+#feedback-form textarea {
+    resize: vertical;
+}
+
+#feedback-form button {
+    background-color: #F38181;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    width: 100%;
+}
+
+#feedback-form button:hover {
+    background-color: #ea6a6a;
+}
+
+
+/* mypage.html */
+
 /* Box Styling */
 .box {
     border: 1px solid #ddd;
@@ -457,6 +504,7 @@ input[type="submit"]:active {
     margin-bottom: 20px;
     background-color: #f9f9f9;
 }
+
 #member-information {
     margin: 30px;
 }
@@ -530,65 +578,32 @@ input[type="submit"]:active {
     margin-bottom: 20px;
     padding: 20px;
     border-radius: 10px;
+    position: relative; /* Added */
 }
 
-#service-info h3 {
-    color: #333;
-    font-size: 1.3em;
-    margin-bottom: 10px;
-}
-
-#service-info p {
-    color: #555;
-    font-size: 1.1em;
-}
-
-#service-info .purchase-date {
-    font-style: italic;
-    color: #888;
-    margin-top: 10px;
-}
-
-
-/* feedback page */
-#feedback {
-    margin: 100px;
-}
-
-#feedback h2 {
-    color: #1a1a1a;
-    font-size: 1.5em;
-    margin-bottom: 20px;
-}
-
-#feedback-form label {
-    font-weight: bold;
-}
-
-#feedback-form input,
-#feedback-form textarea {
-    padding: 5px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-#feedback-form textarea {
-    resize: vertical;
-}
-
-#feedback-form button {
+#service-info .service-card button {
     background-color: #F38181;
     color: white;
     border: none;
-    padding: 10px;
+    padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     font-size: 1em;
     width: 100%;
+    margin-top: 10px;
+    transition: background-color 0.3s ease;
 }
 
-#feedback-form button:hover {
+#service-info .service-card button:hover {
     background-color: #ea6a6a;
+}
+
+#service-info .service-card button:active {
+    background-color: #C45B5B;
+}
+
+#service-info .service-card button.feedback-button {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
 }
